--- a/public/index.html
+++ b/public/index.html
@@ -71,13 +71,20 @@
             }
         </script>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Cairo&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
+
+        <link href="https://unpkg.com/nprogress@0.2.0/nprogress.css" rel="stylesheet" />
+        <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
+
         <link rel="manifest" href="manifest.json" type="application/manifest+json" />
         <link rel="icon" href="images/icons/favicon.ico" type="image/x-icon" />
         <link rel="sitemap" href="sitemap.xml" type="application/xml" />
         <link rel="canonical" href="https://absyro.com" />
         <link rel="icon" href="favicon.ico" />
     </head>
-    <body>
+    <body class="bg-blue-300">
         <noscript>Sorry! Your browser does not support JavaScript!</noscript>
         <div id="app"></div>
     </body>
