--- a/public/index.html
+++ b/public/index.html
@@ -51,24 +51,14 @@
             window.dataLayer ||= [];
 
             gtag('js', new Date());
-            gtag('config', 'G-YXSV34DMHS');
+            gtag('config', 'G-ZCCQ9XS35Y');
 
             function gtag() {
                 dataLayer.push(arguments);
             }
         </script>
         <script type="application/ld+json">
-            {
-                "@context": "https://schema.org",
-                "@type": "WebSite",
-                "name": "Absyro",
-                "url": "https://absyro.com",
-                "potentialAction": { "@type": "SearchAction", "target": "https://absyro.com/search?q={search_term_string}", "query-input": "required name=search_term_string" },
-                "description": "Absyro - Say hi to a brighter futurer",
-                "keywords": ["technology solutions", "innovation services", "digital transformation", "it consulting", "software development", "cloud computing", "cybersecurity", "artificial intelligence", "iot (internet of things)", "mobile app development", "web development", "tech trends", "data analytics", "user experience (ux)", "emerging technologies", "software as a service (saas)", "robotics", "augmented reality (ar)", "virtual reality (vr)", "automation services"],
-                "alternateName": ["A", "Absyro", "Technology", "Services", "Online", "IOT", "VR", "AR"],
-                "inLanguage": "en"
-            }
+            { "@context": "https://schema.org", "@type": "WebSite", "name": "Absyro", "url": "https://absyro.com", "potentialAction": { "@type": "SearchAction", "target": "https://absyro.com/search?q={search_term_string}", "query-input": "required name=search_term_string" }, "description": "Absyro - Say hi to a brighter futurer", "keywords": ["technology solutions", "innovation services", "digital transformation", "it consulting", "software development", "cloud computing", "cybersecurity", "artificial intelligence", "iot (internet of things)", "mobile app development", "web development", "tech trends", "data analytics", "user experience (ux)", "emerging technologies", "software as a service (saas)", "robotics", "augmented reality (ar)", "virtual reality (vr)", "automation services"], "alternateName": ["A", "Absyro", "Technology", "Services", "Online", "IOT", "VR", "AR"], "inLanguage": "en" }
         </script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
