--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <meta property="og:image" content="https://absyro.com/images/opengraph/default.png" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
-        <meta property="og:image:alt" content="Bot Studio - create chatbots without coding using our next-gen drag-and-drop bot editor" />
+        <meta property="og:image:alt" content="Absyro" />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:type" content="website" />
         <meta property="og:locale" content="en_US" />
@@ -42,8 +42,8 @@
 
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="https://absyro.com" />
-        <meta name="twitter:title" content="Bot Studio - No Code Chatbot Maker" />
-        <meta name="twitter:description" content="Create advanced chatbots with Bot Studio, the best free platform for creating chatbots without any coding knowledge." />
+        <meta name="twitter:title" content="Absyro" />
+        <meta name="twitter:description" content="Tech innovation at its best! We offer cutting-edge solutions in software, AI, IoT, and more. Elevate your business with us!" />
         <meta name="twitter:image" content="https://absyro.com/images/opengraph/default.png" />
 
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-YXSV34DMHS"></script>
@@ -51,7 +51,7 @@
             window.dataLayer ||= [];
 
             gtag('js', new Date());
-            gtag('config', 'G-ZCCQ9XS35Y');
+            gtag('config', 'G-YXSV34DMHS');
 
             function gtag() {
                 dataLayer.push(arguments);
