--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
         <link rel="canonical" href="https://absyro.com" />
         <link rel="icon" href="favicon.ico" />
     </head>
-    <body class="bg-slate-200">
+    <body class="bg-zinc-950">
         <noscript>Sorry! Your browser does not support JavaScript!</noscript>
         <div id="app"></div>
     </body>
