--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="application-name" content="Absyro - Say hi to a brighter futurer" />
         <meta name="keywords" content="technology solutions, innovation services, digital transformation, it consulting, software development, cloud computing, cybersecurity, artificial intelligence, iot (internet of things), mobile app development, web development, tech trends, data analytics, user experience (ux), emerging technologies, software as a service (saas), robotics, augmented reality (ar), virtual reality (vr), automation services" />
         <meta name="description" content="Tech innovation at its best! We offer cutting-edge solutions in software, AI, IoT, and more. Elevate your business with us!" />
-        <meta name="theme-color" content="#1f1f1f" />
+        <meta name="theme-color" content="#131313" />
         <meta name="copyright" content="Absyro" />
         <meta name="language" content="en-US" />
         <meta name="author" content="Amir Farzamnia" />
