--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,9 @@
         <meta name="theme-color" content="#131313" />
         <meta name="copyright" content="Absyro" />
         <meta name="language" content="en-US" />
-        <meta name="author" content="Amir Farzamnia" />
-        <meta name="designer" content="Amir Farzamnia" />
-        <meta name="owner" content="Amir Farzamnia" />
-        <meta name="reply-to" content="amir2452fa@gmail.com" />
+        <meta name="author" content="Absyro Company" />
+        <meta name="owner" content="Absyro Company" />
+        <meta name="reply-to" content="contact@absyro.com" />
         <meta name="url" content="https://absyro.com" />
         <meta name="identifier-URL" content="https://absyro.com" />
         <meta name="robots" content="index, follow" />
