--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Absyro</title>
 
-        <!-- Meta Tags -->
+        <meta charset="UTF-8" />
         <meta name="application-name" content="Absyro - Say hi to a brighter futurer" />
         <meta name="keywords" content="technology solutions, innovation services, digital transformation, it consulting, software development, cloud computing, cybersecurity, artificial intelligence, iot (internet of things), mobile app development, web development, tech trends, data analytics, user experience (ux), emerging technologies, software as a service (saas), robotics, augmented reality (ar), virtual reality (vr), automation services" />
         <meta name="description" content="Tech innovation at its best! We offer cutting-edge solutions in software, AI, IoT, and more. Elevate your business with us!" />
@@ -22,12 +22,10 @@
         <meta name="HandheldFriendly" content="true" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-        <!-- Apple Tags -->
         <meta name="apple-mobile-web-app-title" content="Absyro" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-touch-fullscreen" content="yes" />
 
-        <!-- Open-graph Tags -->
         <meta property="og:title" content="Absyro - Say hi to a brighter futurer" />
         <meta property="og:site_name" content="Absyro" />
         <meta property="og:article:tag" content="technology solutions, innovation services, digital transformation, it consulting, software development, cloud computing, cybersecurity, artificial intelligence, iot (internet of things), mobile app development, web development, tech trends, data analytics, user experience (ux), emerging technologies, software as a service (saas), robotics, augmented reality (ar), virtual reality (vr), automation services" />
@@ -42,14 +40,12 @@
         <meta property="og:locale" content="en_US" />
         <meta property="og:article:author" content="Absyro Company" />
 
-        <!-- Twitter Tags -->
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="https://absyro.com" />
         <meta name="twitter:title" content="Absyro" />
         <meta name="twitter:description" content="Tech innovation at its best! We offer cutting-edge solutions in software, AI, IoT, and more. Elevate your business with us!" />
         <meta name="twitter:image" content="https://absyro.com/images/opengraph/default.png" />
 
-        <!-- Links -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link rel="manifest" href="manifest.json" type="application/manifest+json" />
@@ -58,8 +54,7 @@
         <link rel="canonical" href="https://absyro.com" />
         <link rel="icon" href="favicon.ico" />
     </head>
-    <body class="bg-zinc-950">
-        <!-- Content -->
+    <body class="bg-zinc-950 text-slate-200">
         <div id="app"></div>
     </body>
 </html>
